<resources>
    <string name="app_name">BluetoothBikeApp</string>
    <string name="name">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="registration">register</string>
    <string name="login_as_guest">Bejelentekezés vendégként</string>
    <string name="register">Regisztrálj!</string>
    <string name="email">Email</string>
    <string name="password_again">password again</string>
    <string name="cancel">cancel</string>
    <string name="str_label_btn_send">Send</string>
    <string name="str_menu_search_devices">Search Devices</string>
    <string name="str_menu_bluetooth_on">Switch on Bluetooth</string>

    <string name="str_paired_devices">Paired Devices</string>
    <string name="str_available_devices">Available Devices</string>
    <string name="str_menu_scan_devices">Scan Devices</string>
</resources>